plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

/*
 * Common commands (all are plugin tasks unless noted):
 *   ./gradlew bootRun   — run the app (Spring Boot)
 *   ./gradlew start     — same as bootRun (alias below)
 *   ./gradlew build     — compile, test, jar
 *   ./gradlew test      — tests only
 *   ./gradlew clean     — delete build/
 *   ./gradlew bootJar   — executable fat JAR (for deploy)
 * Discover everything: ./gradlew tasks
 */

tasks.register('start') {
    group = 'development'
    description = 'Run the application (delegates to bootRun).'
    dependsOn 'bootRun'
}

group = 'com.rayTracing'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
